--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ html {
 
 .body {
     font-family: 'Montserrat', sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
     background-image: url(../images/cash2.jpg);
 }
 
